@@ -20,6 +20,8 @@
 14. Open 'Lyrion technical information' link in new window/tab using 'Default'
     skin.
 15. Add link to lyrion.org in 'Information' dialog.
+16. For LMS 9.1+ add 'Popular Albums/Releases', 'New Artists', 'Recently
+    Played Artists', and 'Popular Artists' to standard horizontal lists.
 
 6.0.5
 -----
